--- a/ComacVisBackend/src/main/resources/config/application.properties
+++ b/ComacVisBackend/src/main/resources/config/application.properties
@@ -13,3 +13,6 @@
 # limitations under the License.
 working_dir=/home/axnow/work/comac/working_directory
 input_data_dir=/home/axnow/work/comac/comac-rdf-002
+spring.thymeleaf.cache: false
+endpoints.shutdown.enabled=true
+endpoints.shutdown.sensitive=false
