Don't hardcode particular user.home value in application.properties
Makes it at least possible to run without setting working_dir and
input_data_dir elsewhere (although it is probably a good idea anyway).

--- a/ComacVisBackend/src/main/resources/config/application.properties
+++ b/ComacVisBackend/src/main/resources/config/application.properties
@@ -11,8 +11,8 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-working_dir=/home/axnow/work/comac/working_directory
-input_data_dir=/home/axnow/work/comac/comac-rdf-002
+working_dir=${user.home}/work/comac/working_directory
+input_data_dir=${user.home}/work/comac/comac-rdf-002
 spring.thymeleaf.cache: false
 endpoints.shutdown.enabled=true
 endpoints.shutdown.sensitive=false
