Support remote Sesame repositories
Create "local" and "remote" Spring profiles ("local" active by default).
Put the setup of a local repository in the local profile.
In the remote profile set up a HTTP repository instead.

Add a "comac.repository-url" configuration property for the location of
the remote repository.

--- a/ComacVisBackend/src/main/resources/config/application.properties
+++ b/ComacVisBackend/src/main/resources/config/application.properties
@@ -11,8 +11,10 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
+spring.profiles.active=local
 comac.working-directory=${user.home}/work/comac/working_directory
 comac.input-directory=${user.home}/work/comac/comac-rdf-002
+comac.repository-url=http://spark-m1.vls.icm.edu.pl:8080/openrdf-sesame/repositories/COMAC
 spring.thymeleaf.cache: false
 endpoints.shutdown.enabled=true
 endpoints.shutdown.sensitive=false
