--- a/ComacVisBackend/src/main/resources/config/application.properties
+++ b/ComacVisBackend/src/main/resources/config/application.properties
@@ -11,7 +11,7 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-spring.profiles.active=local
+spring.profiles.active=remote
 comac.working-directory=${user.home}/work/comac/working_directory
 comac.input-directory=${user.home}/work/comac/comac-rdf-002
 comac.repository-url=http://spark-m1.vls.icm.edu.pl:8080/openrdf-sesame/repositories/COMAC
