--- a/ComacVisBackend/pom.xml
+++ b/ComacVisBackend/pom.xml
@@ -121,6 +121,11 @@
         </dependency>
         <dependency>
             <groupId>org.openrdf.sesame</groupId>
+            <artifactId>sesame-repository-sparql</artifactId>
+            <version>${sesame.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openrdf.sesame</groupId>
             <artifactId>sesame-rio-turtle</artifactId>
             <version>${sesame.version}</version>
         </dependency>
