Temporarily depend on sesame-rio-rdfxml to work around a Blazegraph bug
The bug is http://jira.blazegraph.com/browse/BLZG-1344 and it causes
Blazegraph to sometimes return RDF/XML even when not asked for.

--- a/ComacVisBackend/pom.xml
+++ b/ComacVisBackend/pom.xml
@@ -130,6 +130,12 @@
             <version>${sesame.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.openrdf.sesame</groupId>
+            <artifactId>sesame-rio-rdfxml</artifactId>
+            <version>${sesame.version}</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
