--- a/ComacVisBackend/src/main/resources/config/application.properties
+++ b/ComacVisBackend/src/main/resources/config/application.properties
@@ -18,7 +18,7 @@ comac.repository-url=http://spark-m1.vls.icm.edu.pl:8080/openrdf-sesame/reposito
 spring.thymeleaf.cache: false
 endpoints.shutdown.enabled=true
 endpoints.shutdown.sensitive=false
-spring.datasource.url=jdbc:hsqldb:file:backend-persistence-db
-spring.datasource.username=dbuser
-spring.datasource.password=dbpass
+spring.datasource.url=jdbc:hsqldb:file:backend_persistence_db;shutdown=true
+spring.datasource.username=SA
+spring.datasource.password=
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
