Added graph queries tool.

--- a/ComacVisBackend/src/main/resources/config/application.properties
+++ b/ComacVisBackend/src/main/resources/config/application.properties
@@ -13,7 +13,7 @@
 # limitations under the License.
 spring.profiles.active=local
 comac.working-directory=${user.home}/work/comac/working_directory
-comac.input-directory=${user.home}/work/comac/comac-polindex-2015-04
+comac.input-directory=${user.home}/work/comac/RDF/input
 comac.repository-url=http://spark-m1.vls.icm.edu.pl:8080/openrdf-sesame/repositories/COMAC
 spring.thymeleaf.cache: false
 endpoints.shutdown.enabled=true
