--- a/ComacVisBackend/src/main/resources/config/application.properties
+++ b/ComacVisBackend/src/main/resources/config/application.properties
@@ -11,7 +11,14 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-spring.profiles.active=local
+
+# use profiles:
+# for backend selection:
+#   sparql, sesame, remote 
+#
+# for connection details use application-xxxx.config 
+#
+spring.profiles.active=sesame
 comac.working-directory=${user.home}/work/comac/working_directory
 comac.input-directory=${user.home}/work/comac/RDF/input
 comac.repository-url=http://spark-m1.vls.icm.edu.pl:8080/openrdf-sesame/repositories/COMAC
