Głęboki refactoring obejmujący lepszą kontrolę nad budowaniem grafu. Dodano reprezentację grafu, enum na typy obiektów. Wyprowadzono budowanie grafu do oddzielnego serwisu. Dodano testy jednostkowe.

--- a/ComacVisBackend/pom.xml
+++ b/ComacVisBackend/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.2.1.RELEASE</version>
+        <version>1.2.6.RELEASE</version>
     </parent>
     
     
@@ -175,5 +175,11 @@
             <version>4.10</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>net.sf.ehcache</groupId>
+            <artifactId>ehcache</artifactId>
+            <version>2.9.0</version>
+        </dependency>
+            
     </dependencies>
 </project>
