Testy serwisu grafowego. Pierwsza część dodawania journali.

--- a/ComacVisBackend/src/main/resources/config/application.properties
+++ b/ComacVisBackend/src/main/resources/config/application.properties
@@ -23,6 +23,8 @@ comac.working-directory=${user.home}/work/comac/working_directory
 comac.input-directory=${user.home}/work/comac/RDF/input
 comac.repository-url=http://spark-m1.vls.icm.edu.pl:8080/openrdf-sesame/repositories/COMAC
 spring.thymeleaf.cache: false
+spring.datasource.schema=classpath:sql/prepare_database_1.00.sql
+
 endpoints.shutdown.enabled=true
 endpoints.shutdown.sensitive=false
 spring.datasource.url=jdbc:hsqldb:file:backend_persistence_db;shutdown=true
