--- a/ComacVisBackend/src/main/resources/config/application.properties
+++ b/ComacVisBackend/src/main/resources/config/application.properties
@@ -18,10 +18,10 @@
 #
 # for connection details use application-xxxx.config 
 #
-spring.profiles.active=sesame
+spring.profiles.active=sparql
 comac.working-directory=${user.home}/work/comac/working_directory
 comac.input-directory=${user.home}/work/comac/RDF/input
-comac.repository-url=http://spark-m1.vls.icm.edu.pl:8080/openrdf-sesame/repositories/COMAC
+#comac.repository-url=http://spark-m1.vls.icm.edu.pl:8080/openrdf-sesame/repositories/COMAC
 spring.thymeleaf.cache: false
 spring.datasource.schema=classpath:sql/prepare_database_1.00.sql
 
