--- a/pom.xml
+++ b/pom.xml
@@ -180,6 +180,11 @@
             <artifactId>ehcache</artifactId>
             <version>2.9.0</version>
         </dependency>
-            
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.2.1</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 </project>
