Added proper cache management with Spring caching Added default ehcache configuration Updated spring-boot to 1.3.x

--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -31,3 +31,5 @@ spring.datasource.url=jdbc:hsqldb:file:backend_persistence_db;shutdown=true
 spring.datasource.username=SA
 spring.datasource.password=
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+spring.cache.ehcache.config=classpath:ehcache.xml
